--- a/k8s/apps/dashy-oauth2-proxy/helm.yaml
+++ b/k8s/apps/dashy-oauth2-proxy/helm.yaml
@@ -2,22 +2,19 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: repo
+  name: dashy-oauth2-proxy
 spec:
   url: https://oauth2-proxy.github.io/manifests
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: release
+  name: dashy-oauth2-proxy
 spec:
   chart:
     spec:
       chart: oauth2-proxy
-      version: 6.24.2
-      sourceRef:
-        kind: HelmRepository
-        name: dashy-oauth2-proxy-repo
+      version: 6.24.1
   values:
     config:
       existingSecret: dashy-oauth2-proxy-secret
