--- a/k8s/apps/dashy-oauth2-proxy/kustomization.yaml
+++ b/k8s/apps/dashy-oauth2-proxy/kustomization.yaml
@@ -1,10 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: dashy-oauth2-proxy-
 namespace: default
 resources:
   - externalsecret.yaml
+  - helm.yaml
 components:
-  - ../../components/helm
-patchesStrategicMerge:
-  - helm-overlay.yaml
+  - ../../components/new-helm
