--- a/k8s/apps/longhorn/externalsecret.yaml
+++ b/k8s/apps/longhorn/externalsecret.yaml
@@ -8,7 +8,7 @@ spec:
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
-    name: longhorn-cifs-secret
+    name: cifs-secret
   data:
     - secretKey: CIFS_PASSWORD
       remoteRef:
