--- a/k8s/apps/minio/externalsecret.yaml
+++ b/k8s/apps/minio/externalsecret.yaml
@@ -1,14 +1,14 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: secret
+  name: minio
 spec:
   secretStoreRef:
     name: vault-secretstore
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
-    name: minio-secret
+    name: minio
   data:
     - secretKey: rootUser
       remoteRef:
