--- a/k8s/apps/zitadel/externalsecret.yaml
+++ b/k8s/apps/zitadel/externalsecret.yaml
@@ -1,14 +1,14 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: secret
+  name: zitadel
 spec:
   secretStoreRef:
     name: vault-secretstore
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
-    name: zitadel-secret
+    name: zitadel
   data:
     - secretKey: masterkey
       remoteRef:
