--- a/k8s/apps/influxdb/helm.yaml
+++ b/k8s/apps/influxdb/helm.yaml
@@ -2,14 +2,14 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: repo
+  name: influxdb
 spec:
   url: https://helm.influxdata.com/
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: release
+  name: influxdb
 spec:
   chart:
     spec:
@@ -23,7 +23,7 @@ spec:
       user: "admin"
       ## The password and token are obtained from an existing secret. The expected
       ## keys are `admin-password` and `admin-token`.
-      existingSecret: influxdb-secret
+      existingSecret: influxdb
 
     persistence:
       enabled: true
