--- a/k8s/apps/influxdb/kustomization.yaml
+++ b/k8s/apps/influxdb/kustomization.yaml
@@ -1,10 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: influxdb-
 namespace: databases
 resources:
-  - externalsecret.yaml
+- externalsecret.yaml
+- helm.yaml
 components:
-  - ../../components/helm
-patchesStrategicMerge:
-  - helm-overlay.yaml
+- ../../components/helm
