--- a/k8s/apps/ingress-nginx/kustomization.yaml
+++ b/k8s/apps/ingress-nginx/kustomization.yaml
@@ -1,10 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: ingress-nginx-
 namespace: ingress-nginx
-# resources:
-#   - externalsecret.yaml
 components:
   - ../../components/helm
-patchesStrategicMerge:
-  - helm-overlay.yaml
+resources:
+  - helm.yaml
