--- a/k8s/apps/kibana/oauth2-proxy/helm.yaml
+++ b/k8s/apps/kibana/oauth2-proxy/helm.yaml
@@ -2,36 +2,33 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: repo
+  name: kibana-oauth2-proxy
 spec:
   url: https://oauth2-proxy.github.io/manifests
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: release
+  name: kibana-oauth2-proxy
 spec:
   chart:
     spec:
       chart: oauth2-proxy
       version: 6.24.2
-      sourceRef:
-        kind: HelmRepository
-        name: longhorn-oauth2-proxy-repo
   values:
     config:
-      existingSecret: longhorn-oauth2-proxy-secret
+      existingSecret: kibana-oauth2-proxy
       configFile: |-
         email_domains = [ "*" ]
-        upstreams = [ "http://longhorn-frontend.longhorn-system.svc.cluster.local/#/dashboard" ]
+        upstreams = [ "http://kibana.default.svc.cluster.local:5601" ]
         pass_access_token = true
         user_id_claim = "sub"
         oidc_groups_claim="my:zitadel:grants"
-        allowed_groups = ["237477822715658605:longhorn-admin"]
+        allowed_groups = ["237477822715658605:kibana-admin"]
 
     extraArgs:
       provider: oidc
-      redirect-url: https://longhorn.walnuts.dev/oauth2/callback
+      redirect-url: https://kibana.walnuts.dev/oauth2/callback
       oidc-issuer-url: https://auth.walnuts.dev
       skip-provider-button: true
     ingress:
@@ -40,15 +37,15 @@ spec:
       path: /
       pathType: Prefix
       hosts:
-        - "longhorn.walnuts.dev"
+        - "kibana.walnuts.dev"
     sessionStorage:
       type: redis
       redis:
-        existingSecret: "longhorn-oauth2-proxy-secret"
+        existingSecret: "kibana-oauth2-proxy"
         passwordKey: "redis-password"
         clientType: "sentinel"
         sentinel:
-          existingSecret: "longhorn-oauth2-proxy-secret"
+          existingSecret: "kibana-oauth2-proxy"
           passwordKey: "redis-password"
           masterName: "mymaster"
           connectionUrls: "redis://redis-release.databases.svc.cluster.local:6379,redis://redis-release.databases.svc.cluster.local:26379"
