--- a/k8s/apps/kibana/oauth2-proxy/kustomization.yaml
+++ b/k8s/apps/kibana/oauth2-proxy/kustomization.yaml
@@ -1,9 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: kibana-oauth2-proxy-
 resources:
   - externalsecret.yaml
+  - helm.yaml
 components:
   - ../../../components/helm
-patchesStrategicMerge:
-  - helm-overlay.yaml
