--- a/k8s/apps/kube-state-metrics/helm.yaml
+++ b/k8s/apps/kube-state-metrics/helm.yaml
@@ -2,17 +2,16 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: repo
+  name: kube-state-metrics
 spec:
   url: https://prometheus-community.github.io/helm-charts
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: release
+  name: kube-state-metrics
 spec:
   chart:
     spec:
       chart: kube-state-metrics
       version: 5.16.1
-  values:
