--- a/k8s/apps/longhorn-oauth2-proxy/kustomization.yaml
+++ b/k8s/apps/longhorn-oauth2-proxy/kustomization.yaml
@@ -1,10 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: longhorn-oauth2-proxy-
 namespace: longhorn-system
 resources:
   - externalsecret.yaml
+  - helm.yaml
 components:
   - ../../components/helm
-patchesStrategicMerge:
-  - helm-overlay.yaml
