--- a/k8s/apps/longhorn/helm.yaml
+++ b/k8s/apps/longhorn/helm.yaml
@@ -2,28 +2,25 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: repo
+  name: longhorn
 spec:
   url: https://charts.longhorn.io
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: release
+  name: longhorn
 spec:
   chart:
     spec:
       chart: longhorn
       version: 1.6.0
-      sourceRef:
-        kind: HelmRepository
-        name: longhorn-repo
   values:
     defaultSettings:
       allowNodeDrainWithLastHealthyReplica: true
       orphanAutoDeletion: true
       backupTarget: "cifs://samba.walnuts.dev/share/longhorn"
-      backupTargetCredentialSecret: "longhorn-cifs-secret"
+      backupTargetCredentialSecret: "cifs-secret"
     csi:
       attacherReplicaCount: 1
       provisionerReplicaCount: 1
