--- a/k8s/apps/longhorn/kustomization.yaml
+++ b/k8s/apps/longhorn/kustomization.yaml
@@ -1,11 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: longhorn-
 namespace: longhorn-system
 resources:
   - externalsecret.yaml
   - storageclass.yaml
+  - helm.yaml
 components:
   - ../../components/helm
-patchesStrategicMerge:
-  - helm-overlay.yaml
