--- a/k8s/apps/metrics-server/helm.yaml
+++ b/k8s/apps/metrics-server/helm.yaml
@@ -2,14 +2,14 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: repo
+  name: metrics-server
 spec:
   url: https://kubernetes-sigs.github.io/metrics-server/
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: release
+  name: metrics-server
 spec:
   chart:
     spec:
