--- a/k8s/apps/minio/helm.yaml
+++ b/k8s/apps/minio/helm.yaml
@@ -2,21 +2,21 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: repo
+  name: minio
 spec:
   url: https://charts.min.io/
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: release
+  name: minio
 spec:
   chart:
     spec:
       chart: minio
       version: 5.0.15
   values:
-    existingSecret: minio-secret
+    existingSecret: minio
     persistence:
       storageClass: longhorn
       size: 8Gi
@@ -38,7 +38,7 @@ spec:
       configUrl: "https://auth.walnuts.dev/.well-known/openid-configuration"
       clientId: "241002618523026212@walnuts.dev"
       # Provide existing client secret from the Kubernetes Secret resource, existing secret will have priority over `clientSecret`
-      existingClientSecretName: "minio-secret"
+      existingClientSecretName: "minio"
       existingClientSecretKey: "client-secret"
       claimName: "urn:zitadel:iam:org:project:roles"
       scopes: "openid,profile,email"
