--- a/k8s/apps/nextcloud/externalsecret.yaml
+++ b/k8s/apps/nextcloud/externalsecret.yaml
@@ -1,14 +1,14 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: secret
+  name: nextcloud
 spec:
   secretStoreRef:
     name: vault-secretstore
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
-    name: nextcloud-secret
+    name: nextcloud
   data:
     - secretKey: admin-password
       remoteRef:
