--- a/k8s/apps/nextcloud/kustomization.yaml
+++ b/k8s/apps/nextcloud/kustomization.yaml
@@ -1,11 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: nextcloud-
 namespace: default
 resources:
   - externalsecret.yaml
   - pvc.yaml
+  - helm.yaml
 components:
   - ../../components/helm
-patchesStrategicMerge:
-  - helm-overlay.yaml
+
