--- a/k8s/apps/nextcloud/pvc.yaml
+++ b/k8s/apps/nextcloud/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc
+  name: nextcloud
 spec:
   storageClassName: longhorn
   volumeName: nextcloud
@@ -14,7 +14,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: data-pvc
+  name: nextcloud-data
   labels:
     recurring-job-group.longhorn.io/default: enabled
 spec:
