--- a/k8s/apps/node-exporter/kustomization.yaml
+++ b/k8s/apps/node-exporter/kustomization.yaml
@@ -1,10 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: node-exporter-
 namespace: monitoring
-
 components:
   - ../../components/helm
-
-patchesStrategicMerge:
-  - helm-overlay.yaml
+resources:
+  - helm.yaml
