--- a/k8s/apps/oekaki-dengon-game-oauth2-proxy/helm.yaml
+++ b/k8s/apps/oekaki-dengon-game-oauth2-proxy/helm.yaml
@@ -2,14 +2,14 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: repo
+  name: oeakaki-oauth2-proxy
 spec:
   url: https://oauth2-proxy.github.io/manifests
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: release
+  name: oeakaki-oauth2-proxy
 spec:
   chart:
     spec:
@@ -17,7 +17,7 @@ spec:
       version: 6.24.2
   values:
     config:
-      existingSecret: oekaki-oauth2-proxy-secret
+      existingSecret: oekaki-oauth2-proxy
       configFile: |-
         email_domains = [ "*" ]
         upstreams = [ "http://oekaki-dengon-game-front.default.svc.cluster.local:3000/" ]
