--- a/k8s/apps/oekaki-dengon-game-oauth2-proxy/kustomization.yaml
+++ b/k8s/apps/oekaki-dengon-game-oauth2-proxy/kustomization.yaml
@@ -1,16 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: oekaki-oauth2-proxy-
 namespace: default
 resources:
   - externalsecret.yaml
+  - helm.yaml
 components:
   - ../../components/helm
-patchesStrategicMerge:
-  - helm-overlay.yaml
 configMapGenerator:
-  - name: templates
+  - name: oekaki-oauth2-proxy-templates
     files:
       - robots.txt
-    options:
-      disableNameSuffixHash: true
+configurations:
+  - configurations.yaml
