--- a/k8s/apps/postgresql/externalsecret.yaml
+++ b/k8s/apps/postgresql/externalsecret.yaml
@@ -1,14 +1,14 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: secret
+  name: postgresql
 spec:
   secretStoreRef:
     name: vault-secretstore
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
-    name: postgres-secret
+    name: postgresql
   data:
     - secretKey: admin-password
       remoteRef:
