--- a/k8s/apps/postgresql/kustomization.yaml
+++ b/k8s/apps/postgresql/kustomization.yaml
@@ -1,11 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: postgres-
 namespace: databases
 resources:
   - pvc.yaml
   - externalsecret.yaml
+  - helm.yaml
 components:
   - ../../components/helm
-patchesStrategicMerge:
-  - helm-overlay.yaml
