--- a/k8s/apps/postgresql/pvc.yaml
+++ b/k8s/apps/postgresql/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc
+  name: postgresql
 spec:
   storageClassName: longhorn
   volumeName: postgresql
