--- a/k8s/apps/redis/externalsecret.yaml
+++ b/k8s/apps/redis/externalsecret.yaml
@@ -1,14 +1,14 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: secret
+  name: redis
 spec:
   secretStoreRef:
     name: vault-secretstore
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
-    name: redis-secret
+    name: redis
   data:
     - secretKey: redis-password
       remoteRef:
