--- a/k8s/apps/redis/helm.yaml
+++ b/k8s/apps/redis/helm.yaml
@@ -2,14 +2,14 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: repo
+  name: redis
 spec:
   url: https://charts.bitnami.com/bitnami
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: release
+  name: redis
 spec:
   chart:
     spec:
@@ -18,7 +18,7 @@ spec:
   values:
     auth:
       sentinel: true
-      existingSecret: "redis-secret"
+      existingSecret: "redis"
       existingSecretPasswordKey: "redis-password"
     master:
       count: 1
