--- a/k8s/apps/vault/helm.yaml
+++ b/k8s/apps/vault/helm.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: repo
+  name: vault
 spec:
   interval: 1m
   url: https://helm.releases.hashicorp.com
@@ -10,7 +10,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: release
+  name: vault
 spec:
   chart:
     spec:
