--- a/k8s/apps/vault/kustomization.yaml
+++ b/k8s/apps/vault/kustomization.yaml
@@ -1,11 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: vault-
 namespace: vault
 resources:
   - sa.yaml
   - sa-token.yaml
+  - helm.yaml
 components:
   - ../../components/helm
-patchesStrategicMerge:
-  - helm-overlay.yaml
