--- a/k8s/apps/vault/sa-token.yaml
+++ b/k8s/apps/vault/sa-token.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: auth-secret
+  name: vault-auth-secret
   annotations:
     kubernetes.io/service-account.name: vault-auth
 type: kubernetes.io/service-account-token
