--- a/k8s/apps/vault/sa.yaml
+++ b/k8s/apps/vault/sa.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: auth
+  name: vault-auth
   namespace: vault
 ---
 apiVersion: rbac.authorization.k8s.io/v1
