--- a/k8s/apps/victoria-metrics/pvc.yaml
+++ b/k8s/apps/victoria-metrics/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc
+  name: victoria-metrics
 spec:
   storageClassName: longhorn
   volumeName: victoria-metrics
