--- a/k8s/apps/zitadel/kustomization.yaml
+++ b/k8s/apps/zitadel/kustomization.yaml
@@ -1,10 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: zitadel-
 namespace: default
 resources:
   - externalsecret.yaml
+  - helm.yaml
 components:
   - ../../components/helm
-patchesStrategicMerge:
-  - helm-overlay.yaml
