--- a/k8s/apps/oekaki-dengon-game-oauth2-proxy/configurations.yaml
+++ b/k8s/apps/oekaki-dengon-game-oauth2-proxy/configurations.yaml
@@ -2,5 +2,5 @@ nameReference:
   - kind: ConfigMap
     version: v1
     fieldSpecs:
-      - path: spec/values/extraVolumes[0]/configMap/name
+      - path: spec/values/extraVolumes[name=custom-templates]/configMap/name
         kind: HelmRelease
