--- a/k8s/apps/external-secrets-store/secretstore.yaml
+++ b/k8s/apps/external-secrets-store/secretstore.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "http://vault-release.vault.svc.cluster.local:8200"
+      server: "http://vault.vault.svc.cluster.local:8200"
       path: "kv"
       version: "v1"
       namespace: "vault"
