--- a/k8s/apps/longhorn-oauth2-proxy/helm.yaml
+++ b/k8s/apps/longhorn-oauth2-proxy/helm.yaml
@@ -48,6 +48,6 @@ spec:
           existingSecret: "longhorn-oauth2-proxy"
           passwordKey: "redis-password"
           masterName: "mymaster"
-          connectionUrls: "redis://redis-release.databases.svc.cluster.local:6379,redis://redis-release.databases.svc.cluster.local:26379"
+          connectionUrls: "redis://redis.databases.svc.cluster.local:6379,redis://redis.databases.svc.cluster.local:26379"
     metrics:
       enabled: true
