--- a/k8s/apps/promtail/helm.yaml
+++ b/k8s/apps/promtail/helm.yaml
@@ -25,4 +25,4 @@ spec:
         memory: 32Mi
     config:
       clients:
-        - url: http://loki-release.monitoring.svc.cluster.local:3100/loki/api/v1/push
+        - url: http://loki.monitoring.svc.cluster.local:3100/loki/api/v1/push
