--- a/k8s/apps/openchokin/back/deployment.yaml
+++ b/k8s/apps/openchokin/back/deployment.yaml
@@ -40,7 +40,7 @@ spec:
             - name: POSTGRES_DB
               value: "openchokin"
             - name: POSTGRES_HOST
-              value: "postgres-release-postgresql.databases.svc.cluster.local"
+              value: "postgres-postgresql.databases.svc.cluster.local"
             - name: POSTGRES_PORT
               value: "5432"
           resources:
