--- a/k8s/apps/wakatime-to-slack-profile/deployment.yaml
+++ b/k8s/apps/wakatime-to-slack-profile/deployment.yaml
@@ -41,7 +41,7 @@ spec:
                   name: wakatime-to-slack-profile-secret
                   key: cookie-secret
             - name: PSQL_ENDPOINT
-              value: "postgres-release-postgresql.databases.svc.cluster.local"
+              value: "postgres-postgresql.databases.svc.cluster.local"
             - name: PSQL_PORT
               value: "5432"
             - name: PSQL_DATABASE
