--- a/k8s/apps/fitbit-manager/deployment.yaml
+++ b/k8s/apps/fitbit-manager/deployment.yaml
@@ -48,7 +48,7 @@ spec:
                   name: fitbit-manager-secret
                   key: cookie_secret
             - name: PSQL_ENDPOINT
-              value: "postgres-postgresql.databases.svc.cluster.local"
+              value: "postgresql.databases.svc.cluster.local"
             - name: PSQL_PORT
               value: "5432"
             - name: PSQL_DATABASE
