--- a/k8s/apps/oekaki-dengon-game-oauth2-proxy/configurations.yaml
+++ b/k8s/apps/oekaki-dengon-game-oauth2-proxy/configurations.yaml
@@ -1,6 +1,5 @@
 nameReference:
   - kind: ConfigMap
-    version: v1
     fieldSpecs:
-      - path: spec/values/extraVolumes[name=custom-templates]/configMap/name
+      - path: spec/values/extraVolumes/configMap/name
         kind: HelmRelease
