--- a/k8s/apps/victoria-metrics/kustomization.yaml
+++ b/k8s/apps/victoria-metrics/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
 namespace: monitoring
 resources:
   - pvc.yaml
@@ -8,7 +7,7 @@ resources:
 components:
   - ../../components/helm
 configMapGenerator:
-  - name: config
+  - name: victoria-metrics-config
     files:
       - scrape.yml=prometheus.yaml
 configurations:
