--- a/k8s/apps/oekaki-dengon-game-oauth2-proxy/helm.yaml
+++ b/k8s/apps/oekaki-dengon-game-oauth2-proxy/helm.yaml
@@ -61,13 +61,13 @@ spec:
       type: redis
       redis:
         # Name of the Kubernetes secret containing the redis & redis sentinel password values (see also `sessionStorage.redis.passwordKey`)
-        existingSecret: "oekaki-oauth2-proxy-secret"
+        existingSecret: "oekaki-oauth2-proxy"
         # Key of the Kubernetes secret data containing the redis password value
         passwordKey: "redis-password"
         # Can be one of standalone|cluster|sentinel
         clientType: "sentinel"
         sentinel:
-          existingSecret: "oekaki-oauth2-proxy-secret"
+          existingSecret: "oekaki-oauth2-proxy"
           passwordKey: "redis-password"
           # Redis sentinel master name
           masterName: "mymaster"
