--- a/k8s/apps/oekaki-dengon-game-oauth2-proxy/externalsecret.yaml
+++ b/k8s/apps/oekaki-dengon-game-oauth2-proxy/externalsecret.yaml
@@ -1,14 +1,14 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: oeakaki-oauth2-proxy
+  name: oekaki-oauth2-proxy
 spec:
   secretStoreRef:
     name: vault-secretstore
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
-    name: oeakaki-oauth2-proxy
+    name: oekaki-oauth2-proxy
   data:
     - secretKey: client-id
       remoteRef:
