--- a/k8s/apps/oekaki-dengon-game-oauth2-proxy/helm.yaml
+++ b/k8s/apps/oekaki-dengon-game-oauth2-proxy/helm.yaml
@@ -2,14 +2,14 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: oeakaki-oauth2-proxy
+  name: oekaki-oauth2-proxy
 spec:
   url: https://oauth2-proxy.github.io/manifests
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: oeakaki-oauth2-proxy
+  name: oekaki-oauth2-proxy
 spec:
   chart:
     spec:
