--- a/k8s/apps/metallb-ipaddress/bgpadvertisment.yaml
+++ b/k8s/apps/metallb-ipaddress/bgpadvertisment.yaml
@@ -3,12 +3,12 @@ kind: BGPAdvertisement
 metadata:
   name: default
   namespace: metallb-system
-spec:
-  # ipAddressPools:
-  #   - default
-  # peers:
-  #   - default
-  communities:
-    - 65535:65282
-  aggregationLength: 32
-  localPref: 100
+# spec:
+#   ipAddressPools:
+#     - default
+#   peers:
+#     - default
+#   communities:
+#     - 65535:65282
+#   aggregationLength: 32
+#   localPref: 100
