--- a/k8s/apps/longhorn/storageclass.yaml
+++ b/k8s/apps/longhorn/storageclass.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: local
+  name: longhorn-local
 provisioner: driver.longhorn.io
 allowVolumeExpansion: true
 parameters:
