--- a/k8s/apps/code-server/deployment.yaml
+++ b/k8s/apps/code-server/deployment.yaml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: code-server
     spec:
+      imagePullSecrets:
+        - name: regcredghcr-login-secret
       securityContext:
         fsGroup: 1000
         fsGroupChangePolicy: "OnRootMismatch"
