--- a/k8s/apps/longhorn-backup/recurring-job.yaml
+++ b/k8s/apps/longhorn-backup/recurring-job.yaml
@@ -1,14 +1,15 @@
 apiVersion: longhorn.io/v1beta2
 kind: RecurringJob
 metadata:
-  name: default
+  name: cifs-backup
   namespace: longhorn-system
 spec:
   concurrency: 1
   cron: 0 4 * * ?
-  groups: []
+  groups:
+  - default
   labels:
     automated: "true"
-  name: default
+  name: cifs-backup
   retain: 1
   task: backup
