--- a/k8s/apps/influxdb/helm.yaml
+++ b/k8s/apps/influxdb/helm.yaml
@@ -47,3 +47,11 @@ spec:
         # kubernetes.io/ingress.class: "nginx"
         # kubernetes.io/tls-acme: "true"
       path: /
+
+    resources:
+      requests:
+        cpu: 50m
+        memory: 50Mi
+      limits:
+        cpu: 500m
+        memory: 512Mi
