victoria metricsをbackupから除外

--- a/k8s/apps/victoria-metrics/pvc.yaml
+++ b/k8s/apps/victoria-metrics/pvc.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: victoria-metrics
+  labels: 
+    recurring-job-group.longhorn.io/default: disabled
 spec:
   storageClassName: longhorn
   volumeName: victoria-metrics
