--- a/k8s/apps/postgresql-ha/externalsecret.yaml
+++ b/k8s/apps/postgresql-ha/externalsecret.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: secret
+  name: postgres-ha-secret
 spec:
   secretStoreRef:
     name: vault-secretstore
