--- a/k8s/apps/postgresql-ha/helm.yaml
+++ b/k8s/apps/postgresql-ha/helm.yaml
@@ -2,14 +2,14 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: repo
+  name: postgres-ha
 spec:
   url: https://charts.bitnami.com/bitnami
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: release
+  name: postgres-ha
 spec:
   chart:
     spec:
