add test user&db

--- a/k8s/apps/postgresql-test/postgresql.yaml
+++ b/k8s/apps/postgresql-test/postgresql.yaml
@@ -12,7 +12,8 @@ spec:
     postgres:  # database owner
     - superuser
     - createdb
-  # databases:
-  #   foo: zalando  # dbname: owner
+    test: []
+  databases:
+    testdb: test  # dbname: owner
   postgresql:
     version: "15"
