--- a/k8s/apps/code-server/deployment.yaml
+++ b/k8s/apps/code-server/deployment.yaml
@@ -33,6 +33,8 @@ spec:
               mountPath: /home/coder/work
             - name: local
               mountPath: /home/coder/.local
+      nodeSelector:
+        kubernetes.io/arch: amd64
       volumes:
         - name: config
           persistentVolumeClaim:
