--- a/k8s/apps/code-server/deployment.yaml
+++ b/k8s/apps/code-server/deployment.yaml
@@ -21,11 +21,13 @@ spec:
         fsGroupChangePolicy: "OnRootMismatch"
       containers:
         - name: code-server
-          image: ghcr.io/kmc-jp/code-server-images-flutter:f342baa2ce64ad0376df67c7fa7f61831bc8d051-32 # {"$imagepolicy": "default:code-server"}
+          image: ghcr.io/kmc-jp/code-server-images-golang:333f22291f347b87c8c3a8299e7aed30d1f39d12-31 # {"$imagepolicy": "default:code-server"}
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 19200
           resources: {}
+          args:
+            - "--git-clone https://github.com/walnuts1018/http-dump"
           volumeMounts:
             - name: config
               mountPath: /home/coder/.config
