--- a/k8s/apps/postgresql-test/users/users.yaml
+++ b/k8s/apps/postgresql-test/users/users.yaml
@@ -2,8 +2,14 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: postgres
+spec:
+  template:
+    type: Opaque
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: juglans
+spec:
+  template:
+    type: Opaque
