--- a/k8s/apps/postgresql-test/users/users.yaml
+++ b/k8s/apps/postgresql-test/users/users.yaml
@@ -2,3 +2,8 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: postgres
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: juglans
