--- a/k8s/apps/postgresql-test/users/component/patches.yaml
+++ b/k8s/apps/postgresql-test/users/component/patches.yaml
@@ -12,23 +12,23 @@
       remoteRef:
         key: postgres_passwords
         property: to-be-changed
-- op: copy
-  from: /metadata/name
-  path: /spec/target/name
-- op: add
-  path: /spec/template
-  value:
-    type: Opaque
-    metadata:
-      labels:
-        application: spilo
-        cluster-name: default
-        team: default
-    data:
-      username: to-be-changed
-- op: copy
-  from: /metadata/name
-  path: /spec/template/data/username
-- op: copy
-  from: /metadata/name
-  path: /spec/data/0/remoteRef/property
+# - op: copy
+#   from: /metadata/name
+#   path: /spec/target/name
+# - op: add
+#   path: /spec/template
+#   value:
+#     type: Opaque
+#     metadata:
+#       labels:
+#         application: spilo
+#         cluster-name: default
+#         team: default
+#     data:
+#       username: to-be-changed
+# - op: copy
+#   from: /metadata/name
+#   path: /spec/template/data/username
+# - op: copy
+#   from: /metadata/name
+#   path: /spec/data/0/remoteRef/property
