--- a/k8s/apps/postgresql-test/users/component/patches.yaml
+++ b/k8s/apps/postgresql-test/users/component/patches.yaml
@@ -7,15 +7,15 @@
     refreshInterval: 1m
     target:
       name: to-be-changed
-    template:
-      type: Opaque
-      metadata:
-        labels:
-          application: spilo
-          cluster-name: default
-          team: default
-      data:
-        username: to-be-changed
+      template:
+        type: Opaque
+        metadata:
+          labels:
+            application: spilo
+            cluster-name: default
+            team: default
+        data:
+          username: to-be-changed
     data:
     - secretKey: password
       remoteRef:
@@ -24,9 +24,9 @@
 - op: copy
   from: /metadata/name
   path: /spec/target/name
-# - op: copy
-#   from: /metadata/name
-#   path: /spec/template/data/username
+- op: copy
+  from: /metadata/name
+  path: /spec/target/template/data/username
 - op: copy
   from: /metadata/name
   path: /spec/data/0/remoteRef/property
