--- a/k8s/apps/postgresql-test/users/component/patches.yaml
+++ b/k8s/apps/postgresql-test/users/component/patches.yaml
@@ -16,6 +16,7 @@
             team: default
         data:
           username: to-be-changed
+          password: {{ .password }}
     data:
     - secretKey: password
       remoteRef:
