--- a/k8s/apps/postgresql-test/postgresql.yaml
+++ b/k8s/apps/postgresql-test/postgresql.yaml
@@ -12,8 +12,9 @@ spec:
     postgres:  # database owner
     - superuser
     - createdb
-    test: []
+    juglans: []
   databases:
-    testdb: test  # dbname: owner
+    # dbname: owner
+    juglans: juglans
   postgresql:
     version: "15"
