--- a/k8s/apps/postgresql-default/users/component/patches.yaml
+++ b/k8s/apps/postgresql-default/users/component/patches.yaml
@@ -16,7 +16,7 @@
             team: default
         data:
           raw_username: "to-be-changed"
-          username: "{{ snakecase .raw_username }}"
+          username: "{{ .raw_username | toString | snakecase }}"
           password: "{{ .password }}"
     data:
     - secretKey: password
