--- a/k8s/apps/postgresql-default/postgresql.yaml
+++ b/k8s/apps/postgresql-default/postgresql.yaml
@@ -15,6 +15,7 @@ spec:
     juglans: []
     fitbit_manager: []
     grafana: []
+    hedgedoc: []
     misskey: []
     nextcloud: []
     oekaki_dengon_game: []
@@ -25,6 +26,7 @@ spec:
     juglans: juglans
     fitbit_manager: fitbit_manager
     grafana: grafana
+    hedgedoc: hedgedoc
     misskey: misskey
     nextcloud: nextcloud
     oekaki_dengon_game: oekaki_dengon_game
