--- a/k8s/apps/postgresql-default/users/users.yaml
+++ b/k8s/apps/postgresql-default/users/users.yaml
@@ -21,6 +21,11 @@ metadata:
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
+  name: hedgedoc
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
   name: misskey
 ---
 apiVersion: external-secrets.io/v1beta1
