--- a/k8s/apps/postgresql-default/users/component/patches.yaml
+++ b/k8s/apps/postgresql-default/users/component/patches.yaml
@@ -17,7 +17,7 @@
             team: default
         data:
           raw_username: "to-be-changed"
-          username: "{{ .raw_username | toString }}"
+          username: "{{ .raw_username }}"
           password: "{{ .password }}"
     data:
     - secretKey: password
