--- a/k8s/apps/postgresql-default/users/users.yaml
+++ b/k8s/apps/postgresql-default/users/users.yaml
@@ -47,3 +47,8 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: wakatime
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: zitadel
