--- a/k8s/apps/postgresql-default/postgresql.yaml
+++ b/k8s/apps/postgresql-default/postgresql.yaml
@@ -45,4 +45,14 @@ spec:
       memory: 2Gi
   patroni:
     pg_hba:
-    - host all all 10.244.0.0/16 md5
+    - local      all             all                             trust
+    - hostssl    all             +zalandos    127.0.0.1/32       pam
+    - host       all             all          127.0.0.1/32       md5
+    - hostssl    all             +zalandos    ::1/128            pam
+    - host       all             all          ::1/128            md5
+    - local      replication     standby                         trust
+    - hostssl    replication     standby      all                md5
+    - hostnossl  all             all          all                reject
+    - hostssl    all             +zalandos    all                pam
+    - hostssl    all             all          all                md5
+    - host       all             all          10.244.0.0/16      md5
