--- a/k8s/apps/wakatime-to-slack-profile/deployment.yaml
+++ b/k8s/apps/wakatime-to-slack-profile/deployment.yaml
@@ -39,7 +39,7 @@ spec:
                   name: wakatime-to-slack-profile-secret
                   key: cookie-secret
             - name: PSQL_ENDPOINT
-              value: "postgresql.databases.svc.cluster.local"
+              value: "postgresql-default.databases.svc.cluster.local"
             - name: PSQL_PORT
               value: "5432"
             - name: PSQL_DATABASE
