--- a/k8s/apps/nextcloud/helm.yaml
+++ b/k8s/apps/nextcloud/helm.yaml
@@ -120,7 +120,7 @@ spec:
     externalDatabase:
       enabled: true
       type: postgresql
-      host: postgresql.databases.svc.cluster.local
+      host: postgresql-default.databases.svc.cluster.local
       database: nextcloud
       existingSecret:
         enabled: true
