update hedgedoc db-url

--- a/k8s/apps/hedgedoc/externalsecret.yaml
+++ b/k8s/apps/hedgedoc/externalsecret.yaml
@@ -9,11 +9,16 @@ spec:
   refreshInterval: 1m
   target:
     name: hedgedoc-secret
+    template:
+      engineVersion: v2
+      type: Opaque
+      data:
+        db-url: postgres://hedgedoc:{{ .dbpassword }}@postgresql-default.databases.svc.cluster.local/hedgedoc
   data:
-    - secretKey: db-url
+    - secretKey: dbpassword
       remoteRef:
-        key: hedgedoc
-        property: db-url
+        key: postgres_passwords
+        property: hedgedoc
     - secretKey: client-secret
       remoteRef:
         key: hedgedoc
