hedgedoc: debug log追加

--- a/k8s/apps/hedgedoc/deployment.yaml
+++ b/k8s/apps/hedgedoc/deployment.yaml
@@ -28,6 +28,8 @@ spec:
               cpu: 30m
               memory: 100Mi
           env:
+            - name: CMD_LOGLEVEL
+              value: "debug"
             - name: CMD_USECDN
               value: "false"
             - name: CMD_DB_URL
