--- a/k8s/apps/hedgedoc/externalsecret.yaml
+++ b/k8s/apps/hedgedoc/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
       engineVersion: v2
       type: Opaque
       data:
-        db-url: postgres://hedgedoc:{{ .dbpassword }}@postgresql-default.databases.svc.cluster.local/hedgedoc
+        db-url: postgres://hedgedoc:{{ .dbpassword }}@postgresql.databases.svc.cluster.local/hedgedoc
   data:
     - secretKey: dbpassword
       remoteRef:
